--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -20,7 +20,7 @@ body {
     text-align: center;
 }
 
-.search{
+.search {
     width: 100%;
     display: flex;
     align-items: center;
@@ -62,13 +62,13 @@ body {
 .weather h1 {
     font-size: 80px;
     font-weight: 500;
-} 
+}
 
 .weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
-} 
+}
 
 .details {
     display: flex;
@@ -104,4 +104,177 @@ body {
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+
+@media (max-width: 1200px) {
+    .card {
+        margin: 80px auto 0;
+        padding: 30px 25px;
+    }
+
+    .weather-icon {
+        width: 140px;
+    }
+
+    .weather h1 {
+        font-size: 70px;
+    }
+
+    .weather h2 {
+        font-size: 40px;
+    }
+
+    .details {
+        padding: 0 15px;
+        margin-top: 40px;
+    }
+
+    .col img {
+        width: 35px;
+    }
+
+    .humidity, .wind {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 992px) {
+    .search input {
+        font-size: 16px;
+        padding: 8px 20px;
+        height: 50px;
+    }
+
+    .search button {
+        width: 50px;
+        height: 50px;
+    }
+
+    .search button img {
+        width: 14px;
+    }
+
+    .weather-icon {
+        width: 120px;
+    }
+
+    .weather h1 {
+        font-size: 60px;
+    }
+
+    .weather h2 {
+        font-size: 35px;
+    }
+
+    .details {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0 10px;
+    }
+
+    .col {
+        margin-bottom: 20px;
+    }
+
+    .col img {
+        width: 30px;
+    }
+
+    .humidity, .wind {
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 768px) {
+    .card {
+        margin: 60px auto 0;
+        padding: 20px 15px;
+    }
+
+    .search input {
+        font-size: 14px;
+        padding: 6px 15px;
+        height: 45px;
+    }
+
+    .search button {
+        width: 40px;
+        height: 40px;
+    }
+
+    .search button img {
+        width: 12px;
+    }
+
+    .weather-icon {
+        width: 100px;
+    }
+
+    .weather h1 {
+        font-size: 50px;
+    }
+
+    .weather h2 {
+        font-size: 30px;
+    }
+
+    .details {
+        padding: 0 5px;
+        margin-top: 30px;
+    }
+
+    .col img {
+        width: 25px;
+    }
+
+    .humidity, .wind {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        margin: 40px auto 0;
+        padding: 15px 10px;
+    }
+
+    .search input {
+        font-size: 12px;
+        padding: 4px 10px;
+        height: 40px;
+    }
+
+    .search button {
+        width: 35px;
+        height: 35px;
+    }
+
+    .search button img {
+        width: 10px;
+    }
+
+    .weather-icon {
+        width: 80px;
+    }
+
+    .weather h1 {
+        font-size: 40px;
+    }
+
+    .weather h2 {
+        font-size: 25px;
+    }
+
+    .details {
+        padding: 0;
+        margin-top: 20px;
+    }
+
+    .col img {
+        width: 20px;
+    }
+
+    .humidity, .wind {
+        font-size: 16px;
+    }
 }
